change getWeightForSection method signature

--- a/Resources/views/Audit/view.html.twig
+++ b/Resources/views/Audit/view.html.twig
@@ -81,7 +81,7 @@
                         <td></td>
                         {% else %}
                         <td>{{ get_resultforsection( audit, section ) }} %</td>
-                        <td>{{ get_weightforsection( section ) }}</td>
+                        <td>{{ get_weightforsection( audit, section ) }}</td>
                         {% endif %}
                         <td></td>
                     </tr>
