section details for edit field template

--- a/Resources/views/Section/edit.html.twig
+++ b/Resources/views/Section/edit.html.twig
@@ -3,7 +3,7 @@
 {% block pagetitle %}
     {{ parent() }}:
     {% if edit == true %}
-        Section: {{ section.title }}
+        Editing Section: {{ section.title }}
     {% else %}
         new Section
     {% endif %}
