tooltip for colour coding on adding field and section onto section and form edit template respectively

--- a/Resources/views/Field/_ulist.html.twig
+++ b/Resources/views/Field/_ulist.html.twig
@@ -1,12 +1,14 @@
 <div class="cisco-audit-orphan-field">
-    <div class="span2">
+    <div class="span2 audit-left-pan">
         <h4>Create:</h4>
         <a class="btn btn-primary btn-small"
            href="{{ path( 'audit_section_new_field', { 'section_id' : section.id } ) }}">
             <i class="icon-plus icon-white"></i> new Field
         </a>
     </div>
-    <div class="span7">
+    <div class="span7 audit-right-pan" id="audit-orphan-info" title="field in <span class='label label-info'>blue</span> are currently associated with one or more section and
+field in <span class='label label-warning'>orange</span> are not currently associated with any section."
+            data-toggle="tooltip">
     {% if ufields is not empty and section.id is not null %}
         <h4>Add existing field: ({{ ufields | length }} available)</h4>
         {% for field in ufields %}
