style change from js to css on hover for options buttons

--- a/Resources/views/Field/_load.html.twig
+++ b/Resources/views/Field/_load.html.twig
@@ -8,8 +8,8 @@
     <td>{{ field.weight }}</td>
     <td><i class="icon-check-empty"/></td>
     {% endif %}
-    <td style="padding: 0 0 0 0 ">
-        <div class="btn-group pull-right cisco-audit-options">
+    <td class="options" style="padding: 0 0 0 0 ">
+        <div class="btn-group pull-right">
             <a class="btn btn-mini cisco-audit-field-view">
                 <i class="icon-eye-open" title="View"></i>
             </a>
