changed the form delete button to archive button

--- a/Resources/views/Form/index.html.twig
+++ b/Resources/views/Form/index.html.twig
@@ -43,9 +43,9 @@
                                     href="{{ path( 'audit_form_edit', { 'form_id': form.id } ) }}">
                                     <i class="icon-wrench"></i>
                                 </a>
-                                <a class="btn btn-mini" title="Delete"
+                                <a class="btn btn-mini" title="Archive"
                                    href="{{ path( 'audit_form_delete', { 'form_id': form.id } ) }}">
-                                    <i class="icon-trash"></i>
+                                    <i class="icon-folder-open"></i>
                                 </a>
                             </div>
                         </td>
