--- a/Resources/views/Field/edit.html.twig
+++ b/Resources/views/Field/edit.html.twig
@@ -62,6 +62,24 @@
                 </div>
                 <div class="control-group">
                     <div class="control-label">
+                        {{ form_label( form.numericalScore ) }}
+                    </div>
+                    <div class="controls">
+                        {{ form_widget( form.numericalScore ) }}
+                        {{ form_errors( form.numericalScore ) }}
+                    </div>
+                </div>
+                <div class="control-group">
+                    <div class="control-label">
+                        {{ form_label( form.wildCardQuestion ) }}
+                    </div>
+                    <div class="controls">
+                        {{ form_widget( form.wildCardQuestion ) }}
+                        {{ form_errors( form.wildCardQuestion ) }}
+                    </div>
+                </div>
+                <div class="control-group">
+                    <div class="control-label">
                         {{ form_label( form.answer_yes ) }}
                     </div>
                     <div class="controls">
