--- a/Resources/views/Section/_load.html.twig
+++ b/Resources/views/Section/_load.html.twig
@@ -1,13 +1,13 @@
 <tr class="cisco-audit-section-row">
-    <td colspan="4">
-        <strong>Section {{ counter }}: {{ section.title }}</strong>
-        {% if section.description is not empty %}
-             - {{ section.description }}
-        {%  else %}
+    <td colspan="8">
+        <div class="pull-left">
+            <strong>Section {{ counter }}: {{ section.title }}</strong>
+            {% if section.description is not empty %}
+            - {{ section.description }}
+            {%  else %}
             <i>(no description)</i>
-        {% endif %}
-    </td>
-    <td style="padding: 0 0 0 0 ">
+            {% endif %}
+        </div>
         <div class="btn-group pull-right cisco-audit-options">
             <a class="btn btn-mini cisco-audit-section-view">
                 <i class="icon-eye-open" title="View"></i>
@@ -27,7 +27,7 @@
     {% include 'CiscoSystemsAuditBundle:Field:_load.html.twig' %}
 {% else %}
     <tr class="warning-empty">
-        <td colspan="6">
+        <td colspan="8">
             <i class="icon-warning-sign"></i>
             No field assigned to this section.
         </td>
